fix: fix todolist's overflow properties

--- a/assets/styles/pages/todoPage.css
+++ b/assets/styles/pages/todoPage.css
@@ -37,6 +37,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 2rem;
+    overflow: hidden;
 }
 
 .todoApp__taskInputWrapper {
@@ -100,7 +101,6 @@
 .todoList,
 .doneList {
     width: 100%;
-    max-height: 345px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
